fix: enforce vertical alignment for table cells in general.scss and ensure newline at end of styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1033,7 +1033,7 @@ body.logged-in {
 .wp-block-table {
 	table {
 		td, th {
-			vertical-align: middle;
+			vertical-align: middle !important;
 		}
 	}
 }
